# cinput

./: LICENSE  __init__.py  pyproject.toml
src/cinput/: __init__.py
src/cinput/parsers/: __init__.py
src/cinput/validators/: __init__.py
src/examples/: int_validator.py
src/tests/: console_tests.py  validator_tests.py
