[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "cinput"
version = "0.0.1"
authors = [
  { name="Iliana De Carufel", email="iliana.decarufel@gmail.com" },
]

dependencies = [
	"rich"
]

description = "A customisable CLI input library."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ilithebutterfly/cinput"
Issues = "https://github.com/ilithebutterfly/cinput/issues"